feat: style articles properly

--- a/src/content/articles/post-1.mdx
+++ b/src/content/articles/post-1.mdx
@@ -1,7 +1,7 @@
 ---
-title: "My First Blog Post"
-pubDate: 2022-07-01
-description: "This is the first post of my new Astro blog."
+title: "My Markdown + JSX Post"
+pubDate: 2025-07-01
+description: "Wow, the MDX format is amazing! Let's explore what we can do."
 ---
 
 ## Here we go
