feat: pretty markdown rendering and content

--- a/src/content/articles/caesar-cipher.mdx
+++ b/src/content/articles/caesar-cipher.mdx
@@ -4,12 +4,24 @@ pubDate: 2025-09-05
 description: "Интересный факт: в vim шифр цезаря реализован как rot13 командой g?"
 ---
 
-## Основные сведения
+### Вариант 21
 
-В шифре Цезаря шифрование сообщения выполняется посимвольно.
-
-Все сообщение _M_ представляется в виде символов одного алфавита.
+гэешъдоунвтцбвъгэешъфтдогсдакяа
 
 import CaesarPlayground from "@/components/interactive/CaesarPlayground.vue";
 
 <CaesarPlayground client:load />
+
+## Контрольные вопросы
+
+1. **Какое преобразование используется в шифре Цезаря для шифрования текста?**
+
+2. **Какое преобразование используется в шифре Цезаря для расшифрования текста?**
+
+3. **Каким требованиям должен удовлетворять открытый текст, подаваемый на вход алгоритма шифрования?**
+
+4. **Какие значения может принимать ключ шифрования?**
+
+5. **Какова трудоёмкость полного перебора для взлома шифра Цезаря?**  
+   Линейная: `O(N)` — необходимо проверить не более `N` возможных ключей.  
+   Для алфавитов это < 50 итераций, что делает полный перебор тривиальной задачей.
