build(deps): add and configure mathjax

--- a/src/content/articles/caesar-cipher.mdx
+++ b/src/content/articles/caesar-cipher.mdx
@@ -14,6 +14,8 @@ import CaesarPlayground from "@/components/interactive/CaesarPlayground.vue";
 
 ## Контрольные вопросы
 
+Формула площади окружности $S = \pi r^2$, где $\pi$ — число Пи, $r$ — радиус окружности.
+
 1. **Какое преобразование используется в шифре Цезаря для шифрования текста?**
 
 2. **Какое преобразование используется в шифре Цезаря для расшифрования текста?**
@@ -23,5 +25,5 @@ import CaesarPlayground from "@/components/interactive/CaesarPlayground.vue";
 4. **Какие значения может принимать ключ шифрования?**
 
 5. **Какова трудоёмкость полного перебора для взлома шифра Цезаря?**  
-   Линейная: `O(N)` — необходимо проверить не более `N` возможных ключей.  
-   Для алфавитов это < 50 итераций, что делает полный перебор тривиальной задачей.
+   Линейная: $O(N)$ — необходимо проверить не более $N$ возможных ключей.
+   Для алфавитов это $< 50$ итераций, что делает полный перебор тривиальной задачей.
