content: add answers to caesar cipher questions

--- a/src/content/articles/caesar-cipher.mdx
+++ b/src/content/articles/caesar-cipher.mdx
@@ -16,14 +16,27 @@ import CaesarPlayground from "@/components/interactive/CaesarPlayground.vue";
 
 Формула площади окружности $S = \pi r^2$, где $\pi$ — число Пи, $r$ — радиус окружности.
 
-1. **Какое преобразование используется в шифре Цезаря для шифрования текста?**
+1. **Какое преобразование используется в шифре Цезаря для шифрования текста?**  
+Шифрование сообщения происходит посимвольно с помощью линейного преобразования
+$$
+𝑦_𝑖 = 𝐸_𝑘(𝑥_𝑖) = (𝑥_𝑖 + 𝑘) \bmod 𝑚
+$$
+где $y_i$ — исходный символ, $x_i$ — шифрованный символ, $k$ — ключ шифрования, $m$ — размер алфавита.
 
-2. **Какое преобразование используется в шифре Цезаря для расшифрования текста?**
+2. **Какое преобразование используется в шифре Цезаря для расшифрования текста?**  
+Расшифрование по известному ключу выполняется посимвольно
+с помощью линейного преобразования, обратного шифрованию.
+$$
+𝑥_𝑖 = 𝐷_𝑘(𝑦_𝑖) = (𝑦_𝑖 − 𝑘) \bmod 𝑚.
+$$
+где $y_i$ — исходный символ, $x_i$ — шифрованный символ, $k$ — ключ шифрования, $m$ — размер алфавита.
 
-3. **Каким требованиям должен удовлетворять открытый текст, подаваемый на вход алгоритма шифрования?**
+3. **Каким требованиям должен удовлетворять открытый текст, подаваемый на вход алгоритма шифрования?**  
+Для успешного шифрования, текст должен состоять только из символов алфавита, для которого написан шифр (например, A–Z или А–Я).
 
-4. **Какие значения может принимать ключ шифрования?**
+4. **Какие значения может принимать ключ шифрования?**  
+   Ключ может принимать значения от $0$ до $m - 1$, где $m$ — размер алфавита.
 
 5. **Какова трудоёмкость полного перебора для взлома шифра Цезаря?**  
    Линейная: $O(N)$ — необходимо проверить не более $N$ возможных ключей.
-   Для алфавитов это $< 50$ итераций, что делает полный перебор тривиальной задачей.
+   Для русского алфавита это $32$ итерации, что делает полный перебор тривиальной задачей.
