content: add an answer

--- a/src/content/articles/caesar-cipher.mdx
+++ b/src/content/articles/caesar-cipher.mdx
@@ -8,13 +8,17 @@ description: "Интересный факт: в vim шифр цезаря реа
 
 гэешъдоунвтцбвъгэешъфтдогсдакяа
 
+Ответ:  
+Автор - _Александр Сергеевич Грибоедов_  
+Произведение - _"Горе от ума"_
+
+Зашифрованный - _Тэчьгтяцв Гчвхччфъй Хвъуачцаф - "Хавч ад еют"_
+
 import CaesarPlayground from "@/components/interactive/CaesarPlayground.vue";
 
 <CaesarPlayground client:load />
 
 ## Контрольные вопросы
-
-Формула площади окружности $S = \pi r^2$, где $\pi$ — число Пи, $r$ — радиус окружности.
 
 1. **Какое преобразование используется в шифре Цезаря для шифрования текста?**  
 Шифрование сообщения происходит посимвольно с помощью линейного преобразования
